--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
         sdk: flutter
   flutter:
     sdk: flutter
-
+  cloud_firestore:
   cupertino_icons: ^1.0.6
   flutter_svg: null
   dots_indicator: ^3.0.0
@@ -30,6 +30,7 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.0.1
   crypto: ^3.0.1
+  flutter_svg_provider: ^1.0.7
 
 dev_dependencies:
   flutter_test:
